[package]
name = "weather"
version = "0.1.0"
authors = ["denis"]
edition = "2018"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = { version = "0.10", features = ["json"] }
